--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,67 @@
-.container{
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
-    max-width: 300px;
+body,html{
+    height: 100%;
+}
+
+header{
     width: 100%;
-    padding: 40px;
-    background-color: red;
-    margin: auto;
-}
-
-h2{
+    height: 300px;
+    background-image: url(../images/fundo.jpg);
+    background-repeat: no-repeat;
     text-align: center;
-    font-weight: 300;
 }
 
-input{
+header h1{   
+    margin-top: 30px;
+    display: inline-block;
+    color: white;
+    background-color: black;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+section.container{
+    max-width: 800px;
+    width: 100%;
+    height: auto;
+    background-color: #ded1d1;
+    margin: auto;
+    margin-top: -80px;
+    padding: 10px 0;
+}
+
+.resultado{
+
+    text-align: center;
+    font-weight: 900;
+    border-top: 2PX solid black;
+    border-bottom: 2PX solid black;
+    padding: 10px;
+    
+}
+
+.inputs{
     width: 100%;
     padding: 10px;
-    margin-top: 20px;
+    height: 100%;
+}
+
+input[type="number"]{
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
 }
 
 select{
     padding: 10px;
     cursor: pointer;
-    margin-top: 10px;
 }
+
+
